fix `.header h2` being too light

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -122,7 +122,6 @@ dd {
      .header h2 {
         font-weight: 300;
         margin: 0;
-        color: #ccc;
     }
 
 aside {
